[package]
name = "fstreedb"
version = "0.1.0"
authors = ["Ilia Konnov <iliakonnov@gmail.com>"]
edition = "2018"

[lib]
name = "fstreedb"
path = "src/lib.rs"

[[bin]]
name = "explorer"
path = "src/explorer/main.rs"

[dependencies]
static_assertions = "1.1"
rmpv = { version="0.4", features=["with-serde"] }
rmp = "0.8.9"
serde = { version="1.0", features=["derive"] }
rand = { version="0.7", features=["small_rng"] }
indexmap = "1.3"
