[package]
name = "ttdb"
version = "0.1.0"
authors = ["Ilia Konnov <iliakonnov@gmail.com>"]
edition = "2018"
description = "Strongly-typed tree-based database"
license = "MIT"
readme = "README.md"

[lib]
name = "ttdb"
path = "src/lib.rs"

[features]
default = ["heed"]

[dependencies]
static_assertions = "1.1"
rmpv = { version="0.4", features=["with-serde"] }
rmp = "0.8.9"
serde = { version="1.0", features=["derive"] }
rand = { version="0.7", features=["small_rng"] }
indexmap = { version="1.3", features=["serde-1"] }
derivative = { version="2.1.1" }
heed = { version="0.7.1", optional=true }

[dependencies.fntools]
git = "https://github.com/WaffleLapkin/fntools.git"
rev = "da2ef6c881c50ed95bfb28b42330e9e13df9461a"
